--- a/package.json
+++ b/package.json
@@ -29,17 +29,25 @@
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^2.10.5",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^2.39.7",
+		"@supabase/gotrue-js": "^2.46.1",
+		"@supabase/ssr": "^0.1.0",
+		"@supabase/supabase-js": "^2.39.8",
 		"@tanstack/svelte-query": "^5.24.8",
-		"bits-ui": "^0.19.3",
+		"bits-ui": "^0.19.7",
 		"clsx": "^2.1.0",
+		"embla-carousel-svelte": "^8.0.0",
+		"formsnap": "^0.5.1",
+		"lucide-svelte": "^0.356.0",
+		"svelte-french-toast": "^1.2.0",
 		"svelte-intersection-observer": "^1.0.0",
 		"svelte-radix": "^1.0.3",
 		"tailwind-merge": "^2.2.1",
