--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"autoprefixer": "^10.4.16",
@@ -46,9 +47,11 @@
 		"clsx": "^2.1.0",
 		"embla-carousel-svelte": "^8.0.0",
 		"formsnap": "^0.5.1",
+		"iconify-icon": "^2.0.0",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-svelte": "^0.356.0",
 		"svelte-french-toast": "^1.2.0",
-		"svelte-intersection-observer": "^1.0.0",
+		"svelte-gestures": "^4.0.0",
 		"svelte-radix": "^1.0.3",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0"
