--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ vite.config.ts.timestamp-*
 
 # Sentry Config File
 .sentryclirc
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
