--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-seo": "^1.6.1",
     "sveltekit-superforms": "^2.10.5",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
