--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"strict": true,
 		"moduleResolution": "bundler"
 	},
-	"include": ["src", "e2e/**/*"]
+	"include": ["src"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
